--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<div class="content" style="display: none;"><span>Medhead is running!</span> </div>
 <app-medhead-header></app-medhead-header>
-<app-medhead-gps [medheadGPS]="mymedheadGPS" ></app-medhead-gps>
+<app-medhead-gps></app-medhead-gps>
