--- a/src/app/medhead-gps/medhead-gps.component.html
+++ b/src/app/medhead-gps/medhead-gps.component.html
@@ -1,6 +1,6 @@
 <div class="medhead-gps-card">
-<h2>{{ medheadGPS.title }} </h2>
-<p>{{ medheadGPS.description }}</p>
+<h2>{{ title }} </h2>
+<p>{{ description }}</p>
 <form #medheadGPSForm="ngForm" (ngSubmit)="onSubmitForm(medheadGPSForm)">
     <table class="table-full">
 
