--- a/src/app/medhead-gps/medhead-gps.component.html
+++ b/src/app/medhead-gps/medhead-gps.component.html
@@ -37,7 +37,7 @@
     </table>
 </form>
 </div>
-<div class="medhead-gps-result" *ngIf="hopistal$ | async as hospital">
+<div class="medhead-gps-result" id="result" *ngIf="hopistal$ | async as hospital">
     
     <table>
         <tr>
